--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,12 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "plugin:react/recommended",
-    "parser": "@typescript-eslint/parser",
+    "extends": "google",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint",
-        "react"
-    ],
     "rules": {
+        "linebreak-style" : "off",
     }
 }
